syntax = "proto3";

package proto;

option go_package = "github.com/nk-nigeria/whot-module/cgp-common/proto";

message Player {
  string id = 1;
  string user_name = 2;
  string wallet = 3;
  bool is_playing = 4;
  int64 vip_level = 6;
  string avatar_id = 7;
  int64 sid = 8;
  int32 order = 9;
}

message Jackpot {
  int64 id = 1;
  string user_id = 2;
  string game_code = 3;
  int64 chips = 4;
  int64 create_time_unix = 5;
}

message BalanceUpdate {
  string user_id = 1;
  int64 amount_chip_before = 2;
  int64 amount_chip_current = 3;
  int64 amount_chip_add = 4;
  int64 amout_chip_bet = 5;
  int64 amout_chip_fee = 6;
  int64 amout_chip_add_prefee = 7;
  int64 total_chip_in_match = 8;
}

message BalanceResult {
  repeated BalanceUpdate updates = 1;
  Jackpot jackpot = 2;
}

message HitJackpotHistory {
  string user_name = 1;
  int64 chips = 2;
  int64 create_time_unix = 3;
}

enum GameState {
  GAME_STATE_UNKNOWN = 0;
  GAME_STATE_IDLE = 1;
  GAME_STATE_MATCHING = 2;
  GAME_STATE_PREPARING = 3;
  GAME_STATE_PLAY = 4;
  GAME_STATE_REWARD = 5;
  GAME_STATE_FINISH = 6;
}

enum OpCodeRequest {

  OPCODE_UNSPECIFIED = 0;

  // New game round starting.
  OPCODE_REQUEST_NEW_GAME = 1; 
  OPCODE_REQUEST_LEAVE_GAME = 2;

  OPCODE_REQUEST_PLAY_CARD = 3;        // client chơi 1 lá
  OPCODE_REQUEST_DRAW_CARD = 4;        // client yêu cầu rút bài
  OPCODE_REQUEST_CALL_WHOT = 5;   // nếu client đánh WHOT, call lựa chọn suit
  OPCODE_USER_INTERACT_CARDS = 6; // client tương tác với cards

  OPCODE_REQUEST_SPIN = 7; // game slots
  OPCODE_REQUEST_BET = 8;
  OPCODE_REQUEST_USER_IN_TABLE = 9;   // get table info
  OPCODE_REQUEST_INFO_TABLE = 10;     //
  OPCODE_REQUEST_HISTORY_RESULT = 11; //

  OPCODE_REQUEST_BUY_SIXIANG_GEM = 12;
  OPCODE_REQUEST_TIP_INGAME = 13;
  OPCODE_REQUEST_SYNC_TABLE = 14;
  OPCODE_REQUEST_COMBINE_CARDS = 15;
  OPCODE_REQUEST_SHOW_CARDS = 16;  
  OPCODE_REQUEST_DECLARE_CARDS = 17;
}


enum OpCodeUpdate {
  OPCODE_UPDATE_UNSPECIFIED = 0;
  OPCODE_UPDATE_TABLE = 1;  // message UpdateTable
  OPCODE_UPDATE_DEAL = 2;   // message UpdateDeal
  OPCODE_UPDATE_FINISH = 3; // message UpdateFinish
  OPCODE_UPDATE_REJECTED = 4;
  OPCODE_UPDATE_GAME_STATE = 5;

  OPCODE_UPDATE_CARD_PLAYED = 6;       // ai đó đã đánh bài
  OPCODE_UPDATE_DRAW_RESULT = 7;       // kết quả rút bài (ai đó rút)
  OPCODE_UPDATE_CALL_WHOT_RESULT = 8;  // kết quả chọn suit sau khi đánh WHOT
  OPCODE_UPDATE_TURN = 9;       // thông báo tới lượt ai

  OPCODE_UPDATE_CARD_STATE = 10;
  OPCODE_UPDATE_WALLET = 11;
  OPCODE_KICK_OFF_THE_TABLE = 12;
  OPCODE_UPDATE_USER_INFO = 13;

  OPCODE_USER_IN_TABLE_INFO = 14;
  OPCODE_ERROR = 15;
  OPCODE_BUY_SIXIANG_GEM = 16;
  OPCODE_PLAYER_CHANGE = 17;
  OPCODE_RESPONSE_TIP_INGAME = 18;
  OPCODE_RESPONSE_SYNC_TABLE = 19;
}

message UpdateTable {
  repeated Player players = 1;
  repeated Player playing_players = 2;
  repeated Player join_players = 3;
  repeated Player leave_players = 4;
  int64 bet = 5;         // chip bet info
  int64 vip = 6;         // min level vip require join room
  int64 time_play = 7;   // timestamp play game
  int64 remain_time = 8; // remain time to end game
  GameState game_state = 9;
  Jackpot jp_treasure = 10;
}